<resources>
    <string name="app_name">Grabble</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Map</string>
    <string name="title_activity_letters">Letter bank</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_settings">Settings</string>
    <string name="noGPS">Turn on GPS</string>
    <string name="baseURL">http://www.inf.ed.ac.uk/teaching/courses/selp/coursework/</string>
    <string name="noInternetSnackbar">"No internet "</string>
    <string name="noInternetRetry">Retry</string>
    <string name="wordConstraint7">A word must have 7 letters</string>
    <string name="wordConstraintExists">" does not exit in the dictionary"</string>
    <string name="wordConstraintLetters">Collect more letters</string>
    <string name="addWord">Add a word</string>
    <string name="statistics">Statistics</string>
    <string name="addButton">Add</string>
</resources>
