...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="left"
                    android:text="Word"
                    android:textColor="@android:color/black"
...
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ListView
                android:id="@+id/wordList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
...
