<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skrebe.titas.grabble.MapsActivity">


    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="20dp"
        android:onClick="letterActivity"
        android:textAlignment="gravity"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/addWord" />

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:onClick="statisticsActivity"
        android:layout_marginTop="70dp"
        android:textAlignment="gravity"
        android:padding="0dp"
        android:gravity="center"
        android:text="@string/statistics" />

    <TextView
        android:id="@+id/letterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/clayout">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:src="@android:drawable/ic_menu_mylocation" />
    </android.support.design.widget.CoordinatorLayout>


</fragment>