<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="difficulty_levels_data" >
        <item>30</item>
        <item>15</item>
        <item>5</item>
    </string-array>

    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>