...
            android:layout_weight="1"
            android:hint="Add a new word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.skrebe.titas.grabble.CustomAutoTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:maxLength="7" />

        </android.support.design.widget.TextInputLayout>
...
